--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -64,7 +64,7 @@ FontDPI=72
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=F79E2BD24214367257201E86750FDE62
+SecurityToken=
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
